@@ -2,12 +2,18 @@ package com.CompeteHub;
 
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
+import org.springframework.boot.autoconfigure.domain.EntityScan;
 import org.springframework.web.servlet.config.annotation.CorsRegistry;
 import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 import org.springframework.context.annotation.Bean;
-// import org.springframework.context.ApplicationListener;
-// import org.springframework.boot.context.event.ApplicationReadyEvent;
-// import java.util.stream.Stream;
+
+import org.springframework.boot.context.event.ApplicationReadyEvent;
+import org.springframework.context.ApplicationListener;
+import org.springframework.data.jpa.repository.JpaRepository;
+import org.springframework.stereotype.Repository;
+
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @SpringBootApplication
 public class CompeteHubApplication {
@@ -33,12 +39,7 @@ public class CompeteHubApplication {
 	// .saveAll(Stream.of("A", "B", "C")
 	// .map(name -> new Todo("configuration", "congratulations, you have set up
 	// correctly!", true))
-	// .toList())
+	// .collect(Collectors.toList()))
 	// .forEach(System.out::println);
 	// }
-
 }
-
-// interface TodoRepository extends CrudRepository<Todo, Long> {
-
-// }
